Fixed alignment of buttons to bottom of the recipe cards & styling of recipe cards on profile page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,12 +46,12 @@
 
 .btn-edit {
     background-color: #e68e3c;
-    width: 98%;
+    width: 100%;
 }
 
 .btn-delete {
     background-color: #cf5a48;
-    width: 98%;
+    width: 100%;
 }
 
 .btn-cancel {
